laborations/lab1/test/bad/bad128.cc
int main () {
	do {int x = 1; } struct foo { int y; }
}
